--- a/style.css
+++ b/style.css
@@ -28,9 +28,28 @@
     margin: 20px;
  }
 
+ #mobile{
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 30px;
+    
+ }
+
+ #menu2{
+     background: white;
+     padding: 7px;
+     border-radius: 10px;
+ }
+
  #nav-duelo, #nav-campeonatos, #nav-times{
      display: inline; 
      margin: 20px; 
+ }
+
+ #link-duelo{
+    color: white;
+    background-color: #008000;
  }
 
  li a{
@@ -58,7 +77,7 @@ li a img{
      text-align: center;
      margin: 150px auto;
      border-radius: 30px;
-     width: 60%;
+     width: 100%;
      position: relative;
      background: url(fundo-estadio.jpg) center;
      background-size: cover;
@@ -115,6 +134,10 @@ select{
 
 @media (max-width: 500px){
 
+    #mobile{
+        display: block;
+    }
+
     #partida{
         width: 100%;
     }
@@ -129,5 +152,6 @@ select{
 
     #nav-duelo, #nav-campeonatos, #nav-times{ 
         margin: 0px; 
+        display: none;
     }
 }
