--- a/style1.css
+++ b/style1.css
@@ -1,58 +1,95 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
- body{
-     background-color: #008000;
-     background: url(grama.jpg);
- }
 
-#menu{
+body {
+    background-color: #008000;
+    background: url(grama.jpg);
+}
+
+#menu {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     height: 150px;
-    
 }
 
-#navegacao{
-     display: inline-block;
-     align-items: center;
-     list-style: none;
-     text-align: center;
- }
+#navegacao {
+    display: inline-block;
+    align-items: center;
+    list-style: none;
+    text-align: center;
+    width: 100%!important;
+}
 
- #troca{
+#troca {
     justify-content: center;
     margin: 20px;
- }
+}
 
- #mobile{
+#mobile {
     display: none;
     position: absolute;
     top: 50px;
     left: 30px;
-    
- }
+}
 
- #menu2{
-     background: white;
-     padding: 7px;
-     border-radius: 10px;
- }
+#menu2 {
+    background: white;
+    padding: 7px;
+    border-radius: 10px;
+}
 
- #nav-duelo, #nav-campeonatos, #nav-times{
-     display: inline; 
-     margin: 20px; 
- }
+#nav-duelo,
+#nav-campeonatos,
+#nav-times {
+    display: inline;
+    margin: 20px;
+}
 
- #link-campeonatos{
+#link-campeonatos {
     color: white;
     background-color: #008000;
- }
+}
 
- li a{
+#table {
+    width: 70%;
+    margin: 0 auto;
+    padding: 2.5rem;
+}
+
+table {
+    width: 100%;
+}
+
+theader {
+    display: none;
+}
+
+tr {
+    display: flex;
+    width: 100%;
+    padding: .5rem;
+    background: white;
+}
+
+tr:nth-of-type(odd) {
+    background: #f5f5f5;
+}
+
+td,
+th {
+    flex: 1 1 20%;
+    text-align: center;
+}
+
+th {
+    text-transform: uppercase;
+}
+
+li a {
     text-decoration: none;
     color: #008000;
     font-size: 1em;
@@ -61,38 +98,36 @@
     background-color: white;
     padding: 10px;
     border-radius: 30px;
- }
+}
 
- li a:hover{
+li a:hover {
     background-color: #008000;
     color: white;
- }
+}
 
-li a img{
+li a img {
     vertical-align: middle;
     padding-right: 5px;
 }
 
-@media (max-width: 500px){
-
-    #mobile{
+@media (max-width: 500px) {
+    #mobile {
         display: block;
     }
-
-    #partida{
+    #partida {
         width: 100%;
     }
-
-    #duelo .mandante, #duelo .visitante #versus{
+    #duelo .mandante,
+    #duelo .visitante #versus {
         display: inline;
     }
-
-    #versus{
+    #versus {
         width: 15px;
     }
-
-    #nav-duelo, #nav-campeonatos, #nav-times{ 
-        margin: 0px; 
+    #nav-duelo,
+    #nav-campeonatos,
+    #nav-times {
+        margin: 0px;
         display: none;
     }
 }
